# gross

./: CMakeLists.txt  COPYING  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  configure.ac
cmake/: FindAsciidoctor.cmake  FindLibSpf2.cmake  FindMilter.cmake  Findc-ares.cmake
doc/examples/: grossd.conf
include/: addrutils.h  bloom.h  check_helo.h  check_reverse.h  check_spf.h  common.h  conf.h  counter.h  helper_dns.h  lookup3.h  msgqueue.h  sha256-test.h  sha256.h  srvutils.h  syncmgr.h  thread_pool.h  utils.h  worker.h
man/: CMakeLists.txt  grossd.8.adoc  grossd.8.in  grossd.conf.5.adoc  grossd.conf.5.in
src/: CMakeLists.txt  Makefile.am  Makefile.in  addrutils.c  bloom-test.c  bloom.c  bloommgr.c  check_dnsbl.c  check_helo.c  check_random.c  check_reverse.c  check_spf.c  client_postfix.c  client_sjsms.c  conf.c  counter-test.c  counter.c  gross.c  grosscheck.c  helper_dns-test.c  helper_dns.c  lookup3.c  mask-test.c  msgqueue-test.c  msgqueue.c  proto_sjsms.c  reverse_ip-test.c  sha256-test.c  sha256.c  srvstatus.c  srvutils.c  stats.c  syncmgr.c  thread_pool.c  utils.c  worker.c  worker_milter.c  worker_postfix.c  worker_sjsms.c
